Bug 54186 - SVGFESpecularLightingElement doesn't support dynamic invalidation, when attributes change.
Summary: SVGFESpecularLightingElement doesn't support dynamic invalidation, when attri...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC OS X 10.5
: P2 Normal
Assignee: Renata Hodovan
URL:
Keywords:
Depends on:
Blocks: 45453
  Show dependency treegraph
 
Reported: 2011-02-10 02:23 PST by Renata Hodovan
Modified: 2011-02-10 07:53 PST (History)
1 user (show)

See Also:


Attachments
Patch (561.25 KB, patch)
2011-02-10 02:59 PST, Renata Hodovan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Renata Hodovan 2011-02-10 02:23:25 PST
SVGFESpecularLightingElement doesn't support dynamic invalidation, when attributes change.
Comment 1 Renata Hodovan 2011-02-10 02:59:18 PST
Created attachment 81944 [details]
Patch
Comment 2 Dirk Schulze 2011-02-10 03:05:38 PST
Comment on attachment 81944 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=81944&action=review

r=me but with changes.

> LayoutTests/svg/dynamic-updates/script-tests/SVGFESpecularLightingElement-dom-in-attr.js:12
> +specularElement.setAttribute("in", "BackgroundImage");

Why do you use backgroundImage here? We don't support it at the moment! Can you use SourceAlpha instead? Otherwise it could be confusing to compare the test on a manual run between browsers.

> LayoutTests/svg/dynamic-updates/script-tests/SVGFESpecularLightingElement-svgdom-in-prop.js:12
> +specularElement.setAttribute("in", "BackgroundImage");

Ditto.
Comment 3 Renata Hodovan 2011-02-10 07:52:25 PST
Comment on attachment 81944 [details]
Patch

Closing bug. Committed r78222 http://trac.webkit.org/changeset/78222